# gpu-ternary-engine

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/: FUTURE-INTEGRATION.md
src/gpu_ternary_engine/: __init__.py  ecology.py  gpu_ternary.py  scaling.py  strategy_species.py
tests/: test_engine.py
