[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpu-ternary-engine"
version = "0.1.0"
description = "GPU-accelerated backend for ternary agent simulation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SuperInstance" }]
keywords = ["gpu", "ternary", "simulation", "agent", "cuda", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
dev = ["pytest>=7.0", "pytest-benchmark>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/gpu_ternary_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
